--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "json-server --watch db.json --port 5000",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
